Fix #903 overlapping text in mobile view

--- a/themes/qgis-theme/static/qgis-style.less
+++ b/themes/qgis-theme/static/qgis-style.less
@@ -490,7 +490,7 @@ section.latest-news a:active .info-box {
   background: #ECECEC;
 }
 section.latest-news header {
-  height: 30px;
+  /*height: 30px;*/
   overflow: visible;
   border-bottom: 1px solid #8d8d8d;
   margin-bottom: 40px;
